Updated font fall backs to avoid layout shifts on first page load

--- a/src/app.css
+++ b/src/app.css
@@ -4,15 +4,25 @@
 	font-family: 'Shippori Mincho';
 	font-weight: 800;
 	font-style: normal;
-	font-display: optional;
+	font-display: swap;
 	src: url('/fonts/shippori-mincho-latin-800-normal.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Shippori Mincho Fallback';
+	font-weight: 800;
+	src: local('Arial');
+	ascent-override: 102.76%;
+	descent-override: 25.51%;
+	line-gap-override: 0%;
+	size-adjust: 112.89%;
 }
 
 @font-face {
 	font-family: 'Inter';
 	font-weight: 400;
 	font-style: normal;
-	font-display: optional;
+	font-display: swap;
 	src: url('/fonts/inter-latin-400-normal.woff2') format('woff2');
 }
 
@@ -20,8 +30,17 @@
 	font-family: 'Inter';
 	font-weight: 600;
 	font-style: normal;
-	font-display: optional;
+	font-display: swap;
 	src: url('/fonts/inter-latin-600-normal.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Inter Fallback';
+	src: local('Arial');
+	ascent-override: 89.79%;
+	descent-override: 22.36%;
+	line-gap-override: 0%;
+	size-adjust: 107.89%;
 }
 
 @theme {
@@ -29,8 +48,8 @@
 	--color-text-body: hsl(0, 0%, 18%);
 	--color-text-muted: hsl(30, 13%, 31%);
 	--color-accent: hsl(7.6, 73.3%, 29.3%);
-	--font-serif: 'Shippori Mincho', serif;
-	--font-sans: 'Inter', system-ui, sans-serif;
+	--font-serif: 'Shippori Mincho', 'Shippori Mincho Fallback', serif;
+	--font-sans: 'Inter', 'Inter Fallback', system-ui, sans-serif;
 	--spacing-content: 750px;
 }
 
